image_proccessing slug removed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ categories = ["command-line-utilities", "image-processing"]
 description = "Convert images to ASCII art (CLI + library)."
 documentation = "https://docs.rs/ascim"
 edition = "2021"
-keywords = ["ascii", "ascii-art", "image", "image-processing", "cli"]
+keywords = ["ascii", "ascii-art", "image", "cli"]
 license-file = "LICENSE"
 name = "ascim"
 readme = "README.md"
