cargo.toml : LICNESE is set to MIT from license-file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Convert images to ASCII art (CLI + library)."
 documentation = "https://docs.rs/ascim"
 edition = "2021"
 keywords = ["ascii", "ascii-art", "image", "cli"]
-license-file = "LICENSE"
+license = "MIT"
 name = "ascim"
 readme = "README.md"
 repository = "https://github.com/subham008/ascim"
